--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Class 4 Task | JavaScript Lover</title>
+    <title>sheik-mostafizur | Class 4 Task | JavaScript Lover</title>
 
     <!-- STYLE START -->
     <link rel="stylesheet" href="./assets/style/style.css" />
